# adventofcode

./: .gitignore  README.md  Readme.md
.devcontainer/: devcontainer.json  docker-compose.yml
2015/: Cargo.toml  get-input.rs  justfile
2015/day-01/: Cargo.toml
2015/day-02/: Cargo.toml
2015/day-03/: Cargo.toml
2015/day-04/: Cargo.toml
2024/: Cargo.toml
2024/day-04/: Cargo.toml
2024/day-04/src/: lib.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: lib.rs
2024/day-06/: Cargo.toml
2024/day-06/src/: lib.rs
2024/day-07/: Cargo.toml
2024/day-07/src/: lib.rs
2024/day-08/: Cargo.toml
2024/day-08/src/: lib.rs
2024/day-09/src/: lib.rs
2024/day-10/: Cargo.toml
2024/day-10/src/: lib.rs
2024/day-11/: Cargo.toml
2024/day-13/: Cargo.toml
2024/day-14/: Cargo.toml
2024/day-14/src/: lib.rs
2024/day-16/: Cargo.toml
2024/day-16/src/: lib.rs
2024/rust/: Cargo.toml  get-input.rs  justfile
2024/rust/day-01/: Cargo.toml
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/src/: lib.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/src/: lib.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/src/: lib.rs
2024/rust/day-06/: Cargo.toml
2024/rust/day-08/src/: lib.rs
2024/rust/day-09/: Cargo.toml
2024/rust/day-10/src/: lib.rs
2024/rust/day-11/src/: lib.rs
2024/rust/day-13/: Cargo.toml
2024/rust/day-13/src/: lib.rs
2024/rust/day-14/: Cargo.toml
2024/rust/day-22/: Cargo.toml
2024/rust/day-22/src/: lib.rs
2024/rust/template/: Cargo.toml
2024/template/: Cargo.toml
2024/template/src/: lib.rs
y2022/: Cargo.toml
(+9 files in other folders)
